aws/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-demo
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: poll-server
          image: 534378753229.dkr.ecr.us-east-2.amazonaws.com/bazeldemo:dev
          ports:
            - containerPort: 8080
