aws/deployment_action.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: action-bazelgrpc
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: action-bazelgrpc
  template:
    metadata:
      labels:
        app: action-bazelgrpc
    spec:
      containers:
        - name: action-bazelgrpc
          image: krpdkr/bazelgrpc-action-service:2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
