aws/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poll-service
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - nodePort: 31479
      port: 8080
      targetPort: 8080
