aws/service_action.yaml
apiVersion: v1
kind: Service
metadata:
  name: action-bazelgrpc
  namespace: bazelgrpc
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: action-bazelgrpc
