aws/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: action-ingress
  annotations:
    #ingress class
    kubernetes.io/ingress.class: alb
    #ingress scheme ; private or public( internet )
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: action-bazelgrpc
              servicePort: 8080
